solver/polytypingml4/parser/polytypingml4_parser.go
// Code generated from PolyTypingML4.g4 by ANTLR 4.13.2. DO NOT EDIT.

package parser // PolyTypingML4
import (
	"fmt"
	"strconv"
	"sync"

	"github.com/antlr4-go/antlr/v4"
)

// Suppress unused import errors
var _ = fmt.Printf
var _ = strconv.Itoa
var _ = sync.Once{}

type PolyTypingML4Parser struct {
	*antlr.BaseParser
}

var PolyTypingML4ParserStaticData struct {
	once                   sync.Once
	serializedATN          []int32
	LiteralNames           []string
	SymbolicNames          []string
	RuleNames              []string
	PredictionContextCache *antlr.PredictionContextCache
	atn                    *antlr.ATN
	decisionToDFA          []*antlr.DFA
}

func polytypingml4ParserInit() {
	staticData := &PolyTypingML4ParserStaticData
	staticData.LiteralNames = []string{
		"", "'|-'", "':'", "'''", "'bool'", "'int'", "'list'", "'->'", "'('",
		"')'", "'.'", "','", "'::'", "'if'", "'then'", "'else'", "'let'", "'='",
		"'in'", "'rec'", "'match'", "'with'", "'[]'", "'|'", "'fun'", "'+'",
		"'-'", "'*'", "'<'",
	}
	staticData.SymbolicNames = []string{
		"", "", "", "", "", "", "", "", "", "", "", "", "", "", "", "", "",
		"", "", "", "", "", "", "", "", "PLUS", "MINUS", "TIMES", "LT", "BOOL",
		"INT", "ID", "WS",
	}
	staticData.RuleNames = []string{
		"eval", "var", "tVar", "type", "tyScheme", "env", "bind", "exp", "fun",
	}
	staticData.PredictionContextCache = antlr.NewPredictionContextCache()
	deserializer := antlr.NewATNDeserializer(nil)
	staticData.atn = deserializer.Deserialize(staticData.serializedATN)
	atn := staticData.atn
	staticData.decisionToDFA = make([]*antlr.DFA, len(atn.DecisionToState))
	decisionToDFA := staticData.decisionToDFA
	for index, state := range atn.DecisionToState {
		decisionToDFA[index] = antlr.NewDFA(state, index)
	}
}

// PolyTypingML4ParserInit initializes any static state used to implement PolyTypingML4Parser. By default the
// static state used to implement the parser is lazily initialized during the first call to
// NewPolyTypingML4Parser(). You can call this function if you wish to initialize the static state ahead
// of time.
func PolyTypingML4ParserInit() {
	staticData := &PolyTypingML4ParserStaticData
	staticData.once.Do(polytypingml4ParserInit)
}

// NewPolyTypingML4Parser produces a new parser instance for the optional input antlr.TokenStream.
func NewPolyTypingML4Parser(input antlr.TokenStream) *PolyTypingML4Parser {
	PolyTypingML4ParserInit()
	this := new(PolyTypingML4Parser)
	this.BaseParser = antlr.NewBaseParser(input)
	staticData := &PolyTypingML4ParserStaticData
	this.Interpreter = antlr.NewParserATNSimulator(this, staticData.atn, staticData.decisionToDFA, staticData.PredictionContextCache)
	this.RuleNames = staticData.RuleNames
	this.LiteralNames = staticData.LiteralNames
	this.SymbolicNames = staticData.SymbolicNames
	this.GrammarFileName = "PolyTypingML4.g4"

	return this
}

// PolyTypingML4Parser tokens.
const (
	PolyTypingML4ParserEOF   = antlr.TokenEOF
	PolyTypingML4ParserT__0  = 1
	PolyTypingML4ParserT__1  = 2
	PolyTypingML4ParserT__2  = 3
	PolyTypingML4ParserT__3  = 4
	PolyTypingML4ParserT__4  = 5
	PolyTypingML4ParserT__5  = 6
	PolyTypingML4ParserT__6  = 7
	PolyTypingML4ParserT__7  = 8
	PolyTypingML4ParserT__8  = 9
	PolyTypingML4ParserT__9  = 10
	PolyTypingML4ParserT__10 = 11
	PolyTypingML4ParserT__11 = 12
	PolyTypingML4ParserT__12 = 13
	PolyTypingML4ParserT__13 = 14
	PolyTypingML4ParserT__14 = 15
	PolyTypingML4ParserT__15 = 16
	PolyTypingML4ParserT__16 = 17
	PolyTypingML4ParserT__17 = 18
	PolyTypingML4ParserT__18 = 19
	PolyTypingML4ParserT__19 = 20
	PolyTypingML4ParserT__20 = 21
	PolyTypingML4ParserT__21 = 22
	PolyTypingML4ParserT__22 = 23
	PolyTypingML4ParserT__23 = 24
	PolyTypingML4ParserPLUS  = 25
	PolyTypingML4ParserMINUS = 26
	PolyTypingML4ParserTIMES = 27
	PolyTypingML4ParserLT    = 28
	PolyTypingML4ParserBOOL  = 29
	PolyTypingML4ParserINT   = 30
	PolyTypingML4ParserID    = 31
	PolyTypingML4ParserWS    = 32
)

// PolyTypingML4Parser rules.
const (
	PolyTypingML4ParserRULE_eval     = 0
	PolyTypingML4ParserRULE_var      = 1
	PolyTypingML4ParserRULE_tVar     = 2
	PolyTypingML4ParserRULE_type     = 3
	PolyTypingML4ParserRULE_tyScheme = 4
	PolyTypingML4ParserRULE_env      = 5
	PolyTypingML4ParserRULE_bind     = 6
	PolyTypingML4ParserRULE_exp      = 7
	PolyTypingML4ParserRULE_fun      = 8
)

// IEvalContext is an interface to support dynamic dispatch.
type IEvalContext interface {
	antlr.ParserRuleContext

	// GetParser returns the parser.
	GetParser() antlr.Parser

	// Getter signatures
	Env() IEnvContext
	Exp() IExpContext
	Type_() ITypeContext
	EOF() antlr.TerminalNode

	// IsEvalContext differentiates from other interfaces.
	IsEvalContext()
}

type EvalContext struct {
	antlr.BaseParserRuleContext
	parser antlr.Parser
}

func NewEmptyEvalContext() *EvalContext {
	var p = new(EvalContext)
	antlr.InitBaseParserRuleContext(&p.BaseParserRuleContext, nil, -1)
	p.RuleIndex = PolyTypingML4ParserRULE_eval
	return p
}

func InitEmptyEvalContext(p *EvalContext) {
	antlr.InitBaseParserRuleContext(&p.BaseParserRuleContext, nil, -1)
	p.RuleIndex = PolyTypingML4ParserRULE_eval
}

func (*EvalContext) IsEvalContext() {}

func NewEvalContext(parser antlr.Parser, parent antlr.ParserRuleContext, invokingState int) *EvalContext {
	var p = new(EvalContext)

	antlr.InitBaseParserRuleContext(&p.BaseParserRuleContext, parent, invokingState)

	p.parser = parser
	p.RuleIndex = PolyTypingML4ParserRULE_eval

	return p
}

func (s *EvalContext) GetParser() antlr.Parser { return s.parser }

func (s *EvalContext) Env() IEnvContext {
	var t antlr.RuleContext
	for _, ctx := range s.GetChildren() {
		if _, ok := ctx.(IEnvContext); ok {
			t = ctx.(antlr.RuleContext)
			break
		}
	}

	if t == nil {
		return nil
	}

	return t.(IEnvContext)
}

func (s *EvalContext) Exp() IExpContext {
	var t antlr.RuleContext
	for _, ctx := range s.GetChildren() {
		if _, ok := ctx.(IExpContext); ok {
			t = ctx.(antlr.RuleContext)
			break
		}
	}

	if t == nil {
		return nil
	}

	return t.(IExpContext)
}

func (s *EvalContext) Type_() ITypeContext {
	var t antlr.RuleContext
	for _, ctx := range s.GetChildren() {
		if _, ok := ctx.(ITypeContext); ok {
			t = ctx.(antlr.RuleContext)
			break
		}
	}

	if t == nil {
		return nil
	}

	return t.(ITypeContext)
}

func (s *EvalContext) EOF() antlr.TerminalNode {
	return s.GetToken(PolyTypingML4ParserEOF, 0)
}

func (s *EvalContext) GetRuleContext() antlr.RuleContext {
	return s
}

func (s *EvalContext) ToStringTree(ruleNames []string, recog antlr.Recognizer) string {
	return antlr.TreesStringTree(s, ruleNames, recog)
}

func (s *EvalContext) EnterRule(listener antlr.ParseTreeListener) {
	if listenerT, ok := listener.(PolyTypingML4Listener); ok {
		listenerT.EnterEval(s)
	}
}

func (s *EvalContext) ExitRule(listener antlr.ParseTreeListener) {
	if listenerT, ok := listener.(PolyTypingML4Listener); ok {
		listenerT.ExitEval(s)
	}
}

func (s *EvalContext) Accept(visitor antlr.ParseTreeVisitor) interface{} {
	switch t := visitor.(type) {
	case PolyTypingML4Visitor:
		return t.VisitEval(s)

	default:
		return t.VisitChildren(s)
	}
}

func (p *PolyTypingML4Parser) Eval() (localctx IEvalContext) {
	localctx = NewEvalContext(p, p.GetParserRuleContext(), p.GetState())
	p.EnterRule(localctx, 0, PolyTypingML4ParserRULE_eval)
	p.EnterOuterAlt(localctx, 1)
	{
		p.SetState(18)
		p.Env()
	}
	{
		p.SetState(19)
		p.Match(PolyTypingML4ParserT__0)
		if p.HasError() {
			// Recognition error - abort rule
			goto errorExit
		}
	}
	{
		p.SetState(20)
		p.exp(0)
	}
	{
		p.SetState(21)
		p.Match(PolyTypingML4ParserT__1)
		if p.HasError() {
			// Recognition error - abort rule
			goto errorExit
		}
	}
	{
		p.SetState(22)
		p.type_(0)
	}
	{
		p.SetState(23)
		p.Match(PolyTypingML4ParserEOF)
		if p.HasError() {
			// Recognition error - abort rule
			goto errorExit
		}
	}

errorExit:
	if p.HasError() {
		v := p.GetError()
		localctx.SetException(v)
		p.GetErrorHandler().ReportError(p, v)
		p.GetErrorHandler().Recover(p, v)
		p.SetError(nil)
	}
	p.ExitRule()
	return localctx
	goto errorExit // Trick to prevent compiler error if the label is not used
}

// IVarContext is an interface to support dynamic dispatch.
type IVarContext interface {
	antlr.ParserRuleContext

	// GetParser returns the parser.
	GetParser() antlr.Parser

	// Getter signatures
	ID() antlr.TerminalNode

	// IsVarContext differentiates from other interfaces.
	IsVarContext()
}

type VarContext struct {
	antlr.BaseParserRuleContext
	parser antlr.Parser
}

func NewEmptyVarContext() *VarContext {
	var p = new(VarContext)
	antlr.InitBaseParserRuleContext(&p.BaseParserRuleContext, nil, -1)
	p.RuleIndex = PolyTypingML4ParserRULE_var
	return p
}

func InitEmptyVarContext(p *VarContext) {
	antlr.InitBaseParserRuleContext(&p.BaseParserRuleContext, nil, -1)
	p.RuleIndex = PolyTypingML4ParserRULE_var
}

func (*VarContext) IsVarContext() {}

func NewVarContext(parser antlr.Parser, parent antlr.ParserRuleContext, invokingState int) *VarContext {
	var p = new(VarContext)

	antlr.InitBaseParserRuleContext(&p.BaseParserRuleContext, parent, invokingState)

	p.parser = parser
	p.RuleIndex = PolyTypingML4ParserRULE_var

	return p
}

func (s *VarContext) GetParser() antlr.Parser { return s.parser }

func (s *VarContext) ID() antlr.TerminalNode {
	return s.GetToken(PolyTypingML4ParserID, 0)
}

func (s *VarContext) GetRuleContext() antlr.RuleContext {
	return s
}

func (s *VarContext) ToStringTree(ruleNames []string, recog antlr.Recognizer) string {
	return antlr.TreesStringTree(s, ruleNames, recog)
}

func (s *VarContext) EnterRule(listener antlr.ParseTreeListener) {
	if listenerT, ok := listener.(PolyTypingML4Listener); ok {
		listenerT.EnterVar(s)
	}
}

func (s *VarContext) ExitRule(listener antlr.ParseTreeListener) {
	if listenerT, ok := listener.(PolyTypingML4Listener); ok {
		listenerT.ExitVar(s)
	}
}

func (s *VarContext) Accept(visitor antlr.ParseTreeVisitor) interface{} {
	switch t := visitor.(type) {
	case PolyTypingML4Visitor:
		return t.VisitVar(s)

	default:
		return t.VisitChildren(s)
	}
}

func (p *PolyTypingML4Parser) Var_() (localctx IVarContext) {
	localctx = NewVarContext(p, p.GetParserRuleContext(), p.GetState())
	p.EnterRule(localctx, 2, PolyTypingML4ParserRULE_var)
	p.EnterOuterAlt(localctx, 1)
	{
		p.SetState(25)
		p.Match(PolyTypingML4ParserID)
		if p.HasError() {
			// Recognition error - abort rule
			goto errorExit
		}
	}

errorExit:
	if p.HasError() {
		v := p.GetError()
		localctx.SetException(v)
		p.GetErrorHandler().ReportError(p, v)
		p.GetErrorHandler().Recover(p, v)
		p.SetError(nil)
	}
	p.ExitRule()
	return localctx
	goto errorExit // Trick to prevent compiler error if the label is not used
}

// ITVarContext is an interface to support dynamic dispatch.
type ITVarContext interface {
	antlr.ParserRuleContext

	// GetParser returns the parser.
	GetParser() antlr.Parser

	// Getter signatures
	ID() antlr.TerminalNode

	// IsTVarContext differentiates from other interfaces.
	IsTVarContext()
}

type TVarContext struct {
	antlr.BaseParserRuleContext
	parser antlr.Parser
}

func NewEmptyTVarContext() *TVarContext {
	var p = new(TVarContext)
	antlr.InitBaseParserRuleContext(&p.BaseParserRuleContext, nil, -1)
	p.RuleIndex = PolyTypingML4ParserRULE_tVar
	return p
}

func InitEmptyTVarContext(p *TVarContext) {
	antlr.InitBaseParserRuleContext(&p.BaseParserRuleContext, nil, -1)
	p.RuleIndex = PolyTypingML4ParserRULE_tVar
}

func (*TVarContext) IsTVarContext() {}

func NewTVarContext(parser antlr.Parser, parent antlr.ParserRuleContext, invokingState int) *TVarContext {
	var p = new(TVarContext)

	antlr.InitBaseParserRuleContext(&p.BaseParserRuleContext, parent, invokingState)

	p.parser = parser
	p.RuleIndex = PolyTypingML4ParserRULE_tVar

	return p
}

func (s *TVarContext) GetParser() antlr.Parser { return s.parser }

func (s *TVarContext) ID() antlr.TerminalNode {
	return s.GetToken(PolyTypingML4ParserID, 0)
}

func (s *TVarContext) GetRuleContext() antlr.RuleContext {
	return s
}

func (s *TVarContext) ToStringTree(ruleNames []string, recog antlr.Recognizer) string {
	return antlr.TreesStringTree(s, ruleNames, recog)
}

func (s *TVarContext) EnterRule(listener antlr.ParseTreeListener) {
	if listenerT, ok := listener.(PolyTypingML4Listener); ok {
		listenerT.EnterTVar(s)
	}
}

func (s *TVarContext) ExitRule(listener antlr.ParseTreeListener) {
	if listenerT, ok := listener.(PolyTypingML4Listener); ok {
		listenerT.ExitTVar(s)
	}
}

func (s *TVarContext) Accept(visitor antlr.ParseTreeVisitor) interface{} {
	switch t := visitor.(type) {
	case PolyTypingML4Visitor:
		return t.VisitTVar(s)

	default:
		return t.VisitChildren(s)
	}
}

func (p *PolyTypingML4Parser) TVar() (localctx ITVarContext) {
	localctx = NewTVarContext(p, p.GetParserRuleContext(), p.GetState())
	p.EnterRule(localctx, 4, PolyTypingML4ParserRULE_tVar)
	p.EnterOuterAlt(localctx, 1)
	{
		p.SetState(27)
		p.Match(PolyTypingML4ParserT__2)
		if p.HasError() {
			// Recognition error - abort rule
			goto errorExit
		}
	}
	{
		p.SetState(28)
		p.Match(PolyTypingML4ParserID)
		if p.HasError() {
			// Recognition error - abort rule
			goto errorExit
		}
	}

errorExit:
	if p.HasError() {
		v := p.GetError()
		localctx.SetException(v)
		p.GetErrorHandler().ReportError(p, v)
		p.GetErrorHandler().Recover(p, v)
		p.SetError(nil)
	}
	p.ExitRule()
	return localctx
	goto errorExit // Trick to prevent compiler error if the label is not used
}

// ITypeContext is an interface to support dynamic dispatch.
type ITypeContext interface {
	antlr.ParserRuleContext

	// GetParser returns the parser.
	GetParser() antlr.Parser
	// IsTypeContext differentiates from other interfaces.
	IsTypeContext()
}

type TypeContext struct {
	antlr.BaseParserRuleContext
	parser antlr.Parser
}

func NewEmptyTypeContext() *TypeContext {
	var p = new(TypeContext)
	antlr.InitBaseParserRuleContext(&p.BaseParserRuleContext, nil, -1)
	p.RuleIndex = PolyTypingML4ParserRULE_type
	return p
}

func InitEmptyTypeContext(p *TypeContext) {
	antlr.InitBaseParserRuleContext(&p.BaseParserRuleContext, nil, -1)
	p.RuleIndex = PolyTypingML4ParserRULE_type
}

func (*TypeContext) IsTypeContext() {}

func NewTypeContext(parser antlr.Parser, parent antlr.ParserRuleContext, invokingState int) *TypeContext {
	var p = new(TypeContext)

	antlr.InitBaseParserRuleContext(&p.BaseParserRuleContext, parent, invokingState)

	p.parser = parser
	p.RuleIndex = PolyTypingML4ParserRULE_type

	return p
}

func (s *TypeContext) GetParser() antlr.Parser { return s.parser }

func (s *TypeContext) CopyAll(ctx *TypeContext) {
	s.CopyFrom(&ctx.BaseParserRuleContext)
}

func (s *TypeContext) GetRuleContext() antlr.RuleContext {
	return s
}

func (s *TypeContext) ToStringTree(ruleNames []string, recog antlr.Recognizer) string {
	return antlr.TreesStringTree(s, ruleNames, recog)
}

type BoolTypeContext struct {
	TypeContext
}

func NewBoolTypeContext(parser antlr.Parser, ctx antlr.ParserRuleContext) *BoolTypeContext {
	var p = new(BoolTypeContext)

	InitEmptyTypeContext(&p.TypeContext)
	p.parser = parser
	p.CopyAll(ctx.(*TypeContext))

	return p
}

func (s *BoolTypeContext) GetRuleContext() antlr.RuleContext {
	return s
}

func (s *BoolTypeContext) EnterRule(listener antlr.ParseTreeListener) {
	if listenerT, ok := listener.(PolyTypingML4Listener); ok {
		listenerT.EnterBoolType(s)
	}
}

func (s *BoolTypeContext) ExitRule(listener antlr.ParseTreeListener) {
	if listenerT, ok := listener.(PolyTypingML4Listener); ok {
		listenerT.ExitBoolType(s)
	}
}

func (s *BoolTypeContext) Accept(visitor antlr.ParseTreeVisitor) interface{} {
	switch t := visitor.(type) {
	case PolyTypingML4Visitor:
		return t.VisitBoolType(s)

	default:
		return t.VisitChildren(s)
	}
}

type TypeVarContext struct {
	TypeContext
}

func NewTypeVarContext(parser antlr.Parser, ctx antlr.ParserRuleContext) *TypeVarContext {
	var p = new(TypeVarContext)

	InitEmptyTypeContext(&p.TypeContext)
	p.parser = parser
	p.CopyAll(ctx.(*TypeContext))

	return p
}

func (s *TypeVarContext) GetRuleContext() antlr.RuleContext {
	return s
}

func (s *TypeVarContext) TVar() ITVarContext {
	var t antlr.RuleContext
	for _, ctx := range s.GetChildren() {
		if _, ok := ctx.(ITVarContext); ok {
			t = ctx.(antlr.RuleContext)
			break
		}
	}

	if t == nil {
		return nil
	}

	return t.(ITVarContext)
}

func (s *TypeVarContext) EnterRule(listener antlr.ParseTreeListener) {
	if listenerT, ok := listener.(PolyTypingML4Listener); ok {
		listenerT.EnterTypeVar(s)
	}
}

func (s *TypeVarContext) ExitRule(listener antlr.ParseTreeListener) {
	if listenerT, ok := listener.(PolyTypingML4Listener); ok {
		listenerT.ExitTypeVar(s)
	}
}

func (s *TypeVarContext) Accept(visitor antlr.ParseTreeVisitor) interface{} {
	switch t := visitor.(type) {
	case PolyTypingML4Visitor:
		return t.VisitTypeVar(s)

	default:
		return t.VisitChildren(s)
	}
}

type ListTypeContext struct {
	TypeContext
	elem ITypeContext
}

func NewListTypeContext(parser antlr.Parser, ctx antlr.ParserRuleContext) *ListTypeContext {
	var p = new(ListTypeContext)

	InitEmptyTypeContext(&p.TypeContext)
	p.parser = parser
	p.CopyAll(ctx.(*TypeContext))

	return p
}

func (s *ListTypeContext) GetElem() ITypeContext { return s.elem }

func (s *ListTypeContext) SetElem(v ITypeContext) { s.elem = v }

func (s *ListTypeContext) GetRuleContext() antlr.RuleContext {
	return s
}

func (s *ListTypeContext) Type_() ITypeContext {
	var t antlr.RuleContext
	for _, ctx := range s.GetChildren() {
		if _, ok := ctx.(ITypeContext); ok {
			t = ctx.(antlr.RuleContext)
			break
		}
	}

	if t == nil {
		return nil
	}

	return t.(ITypeContext)
}

func (s *ListTypeContext) EnterRule(listener antlr.ParseTreeListener) {
	if listenerT, ok := listener.(PolyTypingML4Listener); ok {
		listenerT.EnterListType(s)
	}
}

func (s *ListTypeContext) ExitRule(listener antlr.ParseTreeListener) {
	if listenerT, ok := listener.(PolyTypingML4Listener); ok {
		listenerT.ExitListType(s)
	}
}

func (s *ListTypeContext) Accept(visitor antlr.ParseTreeVisitor) interface{} {
	switch t := visitor.(type) {
	case PolyTypingML4Visitor:
		return t.VisitListType(s)

	default:
		return t.VisitChildren(s)
	}
}

type FunTypeContext struct {
	TypeContext
	param   ITypeContext
	return_ ITypeContext
}

func NewFunTypeContext(parser antlr.Parser, ctx antlr.ParserRuleContext) *FunTypeContext {
	var p = new(FunTypeContext)

	InitEmptyTypeContext(&p.TypeContext)
	p.parser = parser
	p.CopyAll(ctx.(*TypeContext))

	return p
}

func (s *FunTypeContext) GetParam() ITypeContext { return s.param }

func (s *FunTypeContext) GetReturn_() ITypeContext { return s.return_ }

func (s *FunTypeContext) SetParam(v ITypeContext) { s.param = v }

func (s *FunTypeContext) SetReturn_(v ITypeContext) { s.return_ = v }

func (s *FunTypeContext) GetRuleContext() antlr.RuleContext {
	return s
}

func (s *FunTypeContext) AllType_() []ITypeContext {
	children := s.GetChildren()
	len := 0
	for _, ctx := range children {
		if _, ok := ctx.(ITypeContext); ok {
			len++
		}
	}

	tst := make([]ITypeContext, len)
	i := 0
	for _, ctx := range children {
		if t, ok := ctx.(ITypeContext); ok {
			tst[i] = t.(ITypeContext)
			i++
		}
	}

	return tst
}

func (s *FunTypeContext) Type_(i int) ITypeContext {
	var t antlr.RuleContext
	j := 0
	for _, ctx := range s.GetChildren() {
		if _, ok := ctx.(ITypeContext); ok {
			if j == i {
				t = ctx.(antlr.RuleContext)
				break
			}
			j++
		}
	}

	if t == nil {
		return nil
	}

	return t.(ITypeContext)
}

func (s *FunTypeContext) EnterRule(listener antlr.ParseTreeListener) {
	if listenerT, ok := listener.(PolyTypingML4Listener); ok {
		listenerT.EnterFunType(s)
	}
}

func (s *FunTypeContext) ExitRule(listener antlr.ParseTreeListener) {
	if listenerT, ok := listener.(PolyTypingML4Listener); ok {
		listenerT.ExitFunType(s)
	}
}

func (s *FunTypeContext) Accept(visitor antlr.ParseTreeVisitor) interface{} {
	switch t := visitor.(type) {
	case PolyTypingML4Visitor:
		return t.VisitFunType(s)

	default:
		return t.VisitChildren(s)
	}
}

type ParenTypeContext struct {
	TypeContext
}

func NewParenTypeContext(parser antlr.Parser, ctx antlr.ParserRuleContext) *ParenTypeContext {
	var p = new(ParenTypeContext)

	InitEmptyTypeContext(&p.TypeContext)
	p.parser = parser
	p.CopyAll(ctx.(*TypeContext))

	return p
}

func (s *ParenTypeContext) GetRuleContext() antlr.RuleContext {
	return s
}

func (s *ParenTypeContext) Type_() ITypeContext {
	var t antlr.RuleContext
	for _, ctx := range s.GetChildren() {
		if _, ok := ctx.(ITypeContext); ok {
			t = ctx.(antlr.RuleContext)
			break
		}
	}

	if t == nil {
		return nil
	}

	return t.(ITypeContext)
}

func (s *ParenTypeContext) EnterRule(listener antlr.ParseTreeListener) {
	if listenerT, ok := listener.(PolyTypingML4Listener); ok {
		listenerT.EnterParenType(s)
	}
}

func (s *ParenTypeContext) ExitRule(listener antlr.ParseTreeListener) {
	if listenerT, ok := listener.(PolyTypingML4Listener); ok {
		listenerT.ExitParenType(s)
	}
}

func (s *ParenTypeContext) Accept(visitor antlr.ParseTreeVisitor) interface{} {
	switch t := visitor.(type) {
	case PolyTypingML4Visitor:
		return t.VisitParenType(s)

	default:
		return t.VisitChildren(s)
	}
}

type IntTypeContext struct {
	TypeContext
}

func NewIntTypeContext(parser antlr.Parser, ctx antlr.ParserRuleContext) *IntTypeContext {
	var p = new(IntTypeContext)

	InitEmptyTypeContext(&p.TypeContext)
	p.parser = parser
	p.CopyAll(ctx.(*TypeContext))

	return p
}

func (s *IntTypeContext) GetRuleContext() antlr.RuleContext {
	return s
}

func (s *IntTypeContext) EnterRule(listener antlr.ParseTreeListener) {
	if listenerT, ok := listener.(PolyTypingML4Listener); ok {
		listenerT.EnterIntType(s)
	}
}

func (s *IntTypeContext) ExitRule(listener antlr.ParseTreeListener) {
	if listenerT, ok := listener.(PolyTypingML4Listener); ok {
		listenerT.ExitIntType(s)
	}
}

func (s *IntTypeContext) Accept(visitor antlr.ParseTreeVisitor) interface{} {
	switch t := visitor.(type) {
	case PolyTypingML4Visitor:
		return t.VisitIntType(s)

	default:
		return t.VisitChildren(s)
	}
}

func (p *PolyTypingML4Parser) Type_() (localctx ITypeContext) {
	return p.type_(0)
}

func (p *PolyTypingML4Parser) type_(_p int) (localctx ITypeContext) {
	var _parentctx antlr.ParserRuleContext = p.GetParserRuleContext()

	_parentState := p.GetState()
	localctx = NewTypeContext(p, p.GetParserRuleContext(), _parentState)
	var _prevctx ITypeContext = localctx
	var _ antlr.ParserRuleContext = _prevctx // TODO: To prevent unused variable warning.
	_startState := 6
	p.EnterRecursionRule(localctx, 6, PolyTypingML4ParserRULE_type, _p)
	var _alt int

	p.EnterOuterAlt(localctx, 1)
	p.SetState(38)
	p.GetErrorHandler().Sync(p)
	if p.HasError() {
		goto errorExit
	}

	switch p.GetTokenStream().LA(1) {
	case PolyTypingML4ParserT__2:
		localctx = NewTypeVarContext(p, localctx)
		p.SetParserRuleContext(localctx)
		_prevctx = localctx

		{
			p.SetState(31)
			p.TVar()
		}

	case PolyTypingML4ParserT__3:
		localctx = NewBoolTypeContext(p, localctx)
		p.SetParserRuleContext(localctx)
		_prevctx = localctx
		{
			p.SetState(32)
			p.Match(PolyTypingML4ParserT__3)
			if p.HasError() {
				// Recognition error - abort rule
				goto errorExit
			}
		}

	case PolyTypingML4ParserT__4:
		localctx = NewIntTypeContext(p, localctx)
		p.SetParserRuleContext(localctx)
		_prevctx = localctx
		{
			p.SetState(33)
			p.Match(PolyTypingML4ParserT__4)
			if p.HasError() {
				// Recognition error - abort rule
				goto errorExit
			}
		}

	case PolyTypingML4ParserT__7:
		localctx = NewParenTypeContext(p, localctx)
		p.SetParserRuleContext(localctx)
		_prevctx = localctx
		{
			p.SetState(34)
			p.Match(PolyTypingML4ParserT__7)
			if p.HasError() {
				// Recognition error - abort rule
				goto errorExit
			}
		}
		{
			p.SetState(35)
			p.type_(0)
		}
		{
			p.SetState(36)
			p.Match(PolyTypingML4ParserT__8)
			if p.HasError() {
				// Recognition error - abort rule
				goto errorExit
			}
		}

	default:
		p.SetError(antlr.NewNoViableAltException(p, nil, nil, nil, nil, nil))
		goto errorExit
	}
	p.GetParserRuleContext().SetStop(p.GetTokenStream().LT(-1))
	p.SetState(47)
	p.GetErrorHandler().Sync(p)
	if p.HasError() {
		goto errorExit
	}
	_alt = p.GetInterpreter().AdaptivePredict(p.BaseParser, p.GetTokenStream(), 2, p.GetParserRuleContext())
	if p.HasError() {
		goto errorExit
	}
	for _alt != 2 && _alt != antlr.ATNInvalidAltNumber {
		if _alt == 1 {
			if p.GetParseListeners() != nil {
				p.TriggerExitRuleEvent()
			}
			_prevctx = localctx
			p.SetState(45)
			p.GetErrorHandler().Sync(p)
			if p.HasError() {
				goto errorExit
			}

			switch p.GetInterpreter().AdaptivePredict(p.BaseParser, p.GetTokenStream(), 1, p.GetParserRuleContext()) {
			case 1:
				localctx = NewFunTypeContext(p, NewTypeContext(p, _parentctx, _parentState))
				localctx.(*FunTypeContext).param = _prevctx

				p.PushNewRecursionContext(localctx, _startState, PolyTypingML4ParserRULE_type)
				p.SetState(40)

				if !(p.Precpred(p.GetParserRuleContext(), 2)) {
					p.SetError(antlr.NewFailedPredicateException(p, "p.Precpred(p.GetParserRuleContext(), 2)", ""))
					goto errorExit
				}
				{
					p.SetState(41)
					p.Match(PolyTypingML4ParserT__6)
					if p.HasError() {
						// Recognition error - abort rule
						goto errorExit
					}
				}
				{
					p.SetState(42)

					var _x = p.type_(2)

					localctx.(*FunTypeContext).return_ = _x
				}

			case 2:
				localctx = NewListTypeContext(p, NewTypeContext(p, _parentctx, _parentState))
				localctx.(*ListTypeContext).elem = _prevctx

				p.PushNewRecursionContext(localctx, _startState, PolyTypingML4ParserRULE_type)
				p.SetState(43)

				if !(p.Precpred(p.GetParserRuleContext(), 3)) {
					p.SetError(antlr.NewFailedPredicateException(p, "p.Precpred(p.GetParserRuleContext(), 3)", ""))
					goto errorExit
				}
				{
					p.SetState(44)
					p.Match(PolyTypingML4ParserT__5)
					if p.HasError() {
						// Recognition error - abort rule
						goto errorExit
					}
				}

			case antlr.ATNInvalidAltNumber:
				goto errorExit
			}

		}
		p.SetState(49)
		p.GetErrorHandler().Sync(p)
		if p.HasError() {
			goto errorExit
		}
		_alt = p.GetInterpreter().AdaptivePredict(p.BaseParser, p.GetTokenStream(), 2, p.GetParserRuleContext())
		if p.HasError() {
			goto errorExit
		}
	}

errorExit:
	if p.HasError() {
		v := p.GetError()
		localctx.SetException(v)
		p.GetErrorHandler().ReportError(p, v)
		p.GetErrorHandler().Recover(p, v)
		p.SetError(nil)
	}
	p.UnrollRecursionContexts(_parentctx)
	return localctx
	goto errorExit // Trick to prevent compiler error if the label is not used
}

// ITySchemeContext is an interface to support dynamic dispatch.
type ITySchemeContext interface {
	antlr.ParserRuleContext

	// GetParser returns the parser.
	GetParser() antlr.Parser

	// Getter signatures
	Type_() ITypeContext
	AllTVar() []ITVarContext
	TVar(i int) ITVarContext
